feat(statistics): 添加统计聚合功能并修复薪酬计算
- 添加月度薪酬自动计算定时任务

- 新增司机统计聚合接口和补录功能

- 修复薪酬计算从cost_detail查询行程提成

- 修复行程统计查询条件使用actual_end_time

- 修复司机统计ID映射和出勤字段名

- 前端统计页面添加日周月选择器和echarts图表

- 修复前端分页数据兼容性问题